# npg

./: Doxyfile  README  TESTING.md
examples/pddl/: Domain_1.pddl  Domain_2.pddl  Domain_3.pddl  Problem_1.pddl  Problem_2.pddl  Problem_3.pddl  test-domain.pddl  test-problem.pddl
src/: CMakeLists.txt
src/VALfiles/: CMakeLists.txt  Cascader.h  Plan.cpp  Plan.h  TIMUtilities.h  TimSupport.cpp  TimSupport.h  ToFunction.h  instantiation.cpp  instantiation.h  typecheck.h
src/VALfiles/parsing/: CMakeLists.txt
src/colin/: CMakeLists.txt  UseDoxygen.cmake  colintotalordertransformer.h
src/colin/cmake/modules/: FindOSI.cmake
